istiodemo/shop.yml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: beershop-deployment
  labels:
    app: beershop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beershop
  template:
    metadata:
      labels:
        app: beershop
    spec:
      containers:
      - name: beershop
        image: joekhybris/beershop:kubecon3
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: beershop-service
  labels:
    app: beershop
spec:
  selector:
    app: beershop
  ports:
  - name: http
    protocol: TCP
    port: 80
---
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: jumpbox
  labels:
    app: jumpbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jumpbox
  template:
    metadata:
      labels:
        app: jumpbox
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: jumpbox
        image: joekhybris/beershop:kubecon3
